# wgpu_matrices

./: .pre-commit-config.yaml  Cargo.toml
src/: main.rs  matrix.rs  matrix.wgsl  matrix_backup.wgsl
